--- a/apps/example/index.html
+++ b/apps/example/index.html
@@ -1,5 +1,9 @@
 <!doctype html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="./src/index.tsx"></script>
