--- a/apps/example/index.html
+++ b/apps/example/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Reactive DOT demo</title>
   </head>
   <body>
     <div id="root"></div>
